refactored order services by myself